# heige-feishu-word

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/design/: 2026-07-14-heige-feishu-word.md
docs/superpowers/plans/: 2026-07-14-standard-sample.md
docs/superpowers/specs/: 2026-07-14-executive-brief-template-design.md
examples/standard-sample/: body.json
examples/standard-sample/compiled/: document.xml  manifest.json  source.body.json
src/heige_feishu_word/: __init__.py  __main__.py  cli.py  compiler.py  model.py  svg_renderer.py  xml_renderer.py
tests/: __init__.py  fixtures.py  test_cli.py  test_compiler.py  test_model.py  test_svg_renderer.py  test_xml_renderer.py
