[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heige-feishu-word"
version = "0.1.0"
description = "Compile a structured Document Body into Feishu delivery artifacts."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
heige-feishu-word = "heige_feishu_word.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
