[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heige-feishu-word"
version = "0.1.0"
description = "Compile a structured Document Body into Feishu delivery artifacts."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "HeiGeAi"},
]
requires-python = ">=3.9"
dependencies = []
keywords = ["feishu", "lark", "document", "agent", "svg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/HeiGeAi/heige-feishu-word"
Repository = "https://github.com/HeiGeAi/heige-feishu-word"
Issues = "https://github.com/HeiGeAi/heige-feishu-word/issues"

[project.scripts]
heige-feishu-word = "heige_feishu_word.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
